--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "lint": "next lint",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "db:seed": "tsx scripts/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -55,6 +56,7 @@
     "lucide-react": "^0.453.0",
     "next": "^14.2.5",
     "next-themes": "^0.4.6",
+    "postgres": "^3.4.7",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -80,6 +82,7 @@
     "eslint-config-next": "^14.2.5",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.20.3",
     "typescript": "5.6.3"
   }
 }
